--- a/.github/workflows/dev.yml
+++ b/.github/workflows/dev.yml
@@ -63,11 +63,9 @@ jobs:
   deploy:
     concurrency:
       group: deploy
-    needs:
-      - automated-tests
+    needs: automated-tests
     environment: dev
     runs-on: ubuntu-latest
-    if: github.actor != 'dependabot[bot]'
     env:
       AWS_REGION: ${{secrets.AWS_REGION}}
       RIOT_KEY: ${{secrets.RIOT_KEY}}
@@ -93,7 +91,7 @@ jobs:
           npm run deploy
 
   approve:
-    needs: automated-tests
+    needs: deploy
     runs-on: ubuntu-latest
     env:
       PR_URL: ${{github.event.pull_request.html_url}}
