--- a/.github/workflows/dev.yml
+++ b/.github/workflows/dev.yml
@@ -51,7 +51,7 @@ jobs:
         run: behave
 
       - name: Install frontend dependencies
-        run: npm i
+        run: npm ci
         working-directory: ./packages/frontend
       - name: Run unit tests
         run: npm run test
@@ -87,7 +87,7 @@ jobs:
           echo "{ \"aws_region\": \"$AWS_REGION\", \"riot_key\": \"$RIOT_KEY\", \"discord_public_key\": \"$DISCORD_PUBLIC_KEY\", \"application_id\": \"$APPLICATION_ID\", \"token\": \"$TOKEN\" }" > configs/config.json
       - name: Deploy dev app
         run: |
-          npm i
+          npm ci
           npm run deploy
 
   approve:
