--- a/.github/workflows/prod.yml
+++ b/.github/workflows/prod.yml
@@ -48,5 +48,5 @@ jobs:
           echo "{ \"aws_region\": \"$AWS_REGION\", \"riot_key\": \"$RIOT_KEY\", \"discord_public_key\": \"$DISCORD_PUBLIC_KEY\", \"application_id\": \"$APPLICATION_ID\", \"token\": \"$TOKEN\" }" > configs/config.json
       - name: Deploy prod app
         run: |
-          npm i
+          npm ci
           npm run deploy:prod
