--- a/packages/frontend/.eslintrc.json
+++ b/packages/frontend/.eslintrc.json
@@ -2,7 +2,6 @@
   "extends": [
     "next/core-web-vitals",
     "plugin:testing-library/react",
-    "plugin:jest-dom/recommended",
-    "plugin:sonarjs/recommended"
+    "plugin:jest-dom/recommended"
   ]
 }
