add tsconfig to sonar sources

--- a/.github/workflows/prod.yml
+++ b/.github/workflows/prod.yml
@@ -25,6 +25,7 @@ jobs:
   deploy:
     concurrency:
       group: deploy
+    needs: release
     environment: prod
     runs-on: ubuntu-latest
     env:
