remove tsconfig from sonar

--- a/.sonarcloud.properties
+++ b/.sonarcloud.properties
@@ -1,4 +1,4 @@
-sonar.sources=configs,stacks,packages/frontend/app,packages/frontend/tsconfig.json,packages/functions/src,deploy-dev.js,deploy-prod.js,deploy.js,tsconfig.json
+sonar.sources=configs,stacks,packages/frontend/app,packages/functions/src,deploy-dev.js,deploy-prod.js,deploy.js
 sonar.exclusions=**/config.actions.json,**/config.json,**/package-lock.json,**/package.json,**/favicon.ico,**/requirements.txt,**/template.json,**/discord_commands.yaml,**/zoe.png
 
 sonar.tests=packages/frontend/__tests__,packages/functions/features,packages/functions/test
