--- a/.sonarcloud.properties
+++ b/.sonarcloud.properties
@@ -1,5 +1,5 @@
 sonar.sources=configs,stacks,packages/frontend,packages/functions/src,deploy-dev.js,deploy-prod.js,deploy.js,sst.config.ts
-sonar.exclusions=**/config.actions.json,**/config.json,**/package-lock.json,**/package.json,**/favicon.ico,**/__tests__,**/.eslintrc.json,**/.gitignore,**/README.md,**/tsconfig.json,**/requirements.txt,**/template.json,**/discord_commands.yaml,**/zoe.png
+sonar.exclusions=**/config.actions.json,**/config.json,**/package-lock.json,**/package.json,**/favicon.ico,**/__tests__/**,**/.eslintrc.json,**/.gitignore,**/README.md,**/tsconfig.json,**/requirements.txt,**/template.json,**/discord_commands.yaml,**/zoe.png
 
 sonar.tests=packages/frontend/__tests__,packages/functions/features,packages/functions/test
 sonar.test.exclusions=**/*.feature,**/__init__.py
