--- a/configs/config.json
+++ b/configs/config.json
@@ -1,6 +1,7 @@
 {
   "aws_region": "<AWS REGION>",
   "riot_key": "<RIOT API KEY>",
+  "api_key": "<API KEY>",
   "discord_public_key": "<DISCORD PUBLIC KEY>",
   "application_id": "<DISCORD APPLICATION ID>",
   "token": "<DISCORD BOT TOKEN>"
