--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -3,46 +3,46 @@
 # Please see the documentation for all configuration options:
 # https://docs.github.com/github/administering-a-repository/configuration-options-for-dependency-updates
 
-version: 2
-updates:
-  - package-ecosystem: "github-actions"
-    directory: "/"
-    schedule:
-      interval: "weekly"
-  - package-ecosystem: "npm"
-    directory: "/"
-    schedule:
-      interval: "weekly"
-  - package-ecosystem: "npm"
-    directory: "/configs"
-    schedule:
-      interval: "weekly"
-  - package-ecosystem: "npm"
-    directory: "/packages/frontend"
-    schedule:
-      interval: "weekly"
-    target-branch: "dependencies"
-  - package-ecosystem: "pip"
-    directory: "/packages/functions"
-    schedule:
-      interval: "weekly"
-  - package-ecosystem: "pip"
-    directory: "/packages/functions/src/layers/dynamo"
-    schedule:
-      interval: "weekly"
-  - package-ecosystem: "pip"
-    directory: "/packages/functions/src/layers/league"
-    schedule:
-      interval: "weekly"
-  - package-ecosystem: "pip"
-    directory: "/packages/functions/src/main"
-    schedule:
-      interval: "weekly"
-  - package-ecosystem: "pip"
-    directory: "/packages/functions/src/register"
-    schedule:
-      interval: "weekly"
-  - package-ecosystem: "pip"
-    directory: "/packages/functions/src/task"
-    schedule:
-      interval: "weekly"
+# version: 2
+# updates:
+#   - package-ecosystem: "github-actions"
+#     directory: "/"
+#     schedule:
+#       interval: "weekly"
+#   - package-ecosystem: "npm"
+#     directory: "/"
+#     schedule:
+#       interval: "weekly"
+#   - package-ecosystem: "npm"
+#     directory: "/configs"
+#     schedule:
+#       interval: "weekly"
+#   - package-ecosystem: "npm"
+#     directory: "/packages/frontend"
+#     schedule:
+#       interval: "weekly"
+#     target-branch: "dependencies"
+#   - package-ecosystem: "pip"
+#     directory: "/packages/functions"
+#     schedule:
+#       interval: "weekly"
+#   - package-ecosystem: "pip"
+#     directory: "/packages/functions/src/layers/dynamo"
+#     schedule:
+#       interval: "weekly"
+#   - package-ecosystem: "pip"
+#     directory: "/packages/functions/src/layers/league"
+#     schedule:
+#       interval: "weekly"
+#   - package-ecosystem: "pip"
+#     directory: "/packages/functions/src/main"
+#     schedule:
+#       interval: "weekly"
+#   - package-ecosystem: "pip"
+#     directory: "/packages/functions/src/register"
+#     schedule:
+#       interval: "weekly"
+#   - package-ecosystem: "pip"
+#     directory: "/packages/functions/src/task"
+#     schedule:
+#       interval: "weekly"
