--- a/.github/workflows/prod.yml
+++ b/.github/workflows/prod.yml
@@ -22,33 +22,33 @@ jobs:
           automatic_release_tag: latest
           files: LICENSE
 
-  deploy:
-    concurrency:
-      group: deploy
-    needs: release
-    environment: prod
-    runs-on: ubuntu-latest
-    env:
-      AWS_REGION: ${{secrets.AWS_REGION}}
-      RIOT_KEY: ${{secrets.RIOT_KEY}}
-      DISCORD_PUBLIC_KEY: ${{secrets.DISCORD_PUBLIC_KEY}}
-      APPLICATION_ID: ${{secrets.APPLICATION_ID}}
-      TOKEN: ${{secrets.TOKEN}}
-      API_KEY: ${{secrets.API_KEY}}
-    steps:
-      - name: Configure AWS credentials
-        uses: aws-actions/configure-aws-credentials@v4
-        with:
-          role-to-assume: arn:aws:iam::${{secrets.AWS_ACCOUNT_ID}}:role/ZoeBotActions
-          role-duration-seconds: 900
-          aws-region: ${{secrets.AWS_REGION}}
+  # deploy:
+  #   concurrency:
+  #     group: deploy
+  #   needs: release
+  #   environment: prod
+  #   runs-on: ubuntu-latest
+  #   env:
+  #     AWS_REGION: ${{secrets.AWS_REGION}}
+  #     RIOT_KEY: ${{secrets.RIOT_KEY}}
+  #     DISCORD_PUBLIC_KEY: ${{secrets.DISCORD_PUBLIC_KEY}}
+  #     APPLICATION_ID: ${{secrets.APPLICATION_ID}}
+  #     TOKEN: ${{secrets.TOKEN}}
+  #     API_KEY: ${{secrets.API_KEY}}
+  #   steps:
+  #     - name: Configure AWS credentials
+  #       uses: aws-actions/configure-aws-credentials@v4
+  #       with:
+  #         role-to-assume: arn:aws:iam::${{secrets.AWS_ACCOUNT_ID}}:role/ZoeBotActions
+  #         role-duration-seconds: 900
+  #         aws-region: ${{secrets.AWS_REGION}}
 
-      - name: Git clone the repository
-        uses: actions/checkout@v4
-      - name: Create config.json
-        run: |
-          echo "{ \"aws_region\": \"$AWS_REGION\", \"riot_key\": \"$RIOT_KEY\", \"api_key\": \"$API_KEY\", \"discord_public_key\": \"$DISCORD_PUBLIC_KEY\", \"application_id\": \"$APPLICATION_ID\", \"token\": \"$TOKEN\" }" > configs/config.json
-      - name: Deploy prod app
-        run: |
-          npm ci
-          npm run deploy:prod
+  #     - name: Git clone the repository
+  #       uses: actions/checkout@v4
+  #     - name: Create config.json
+  #       run: |
+  #         echo "{ \"aws_region\": \"$AWS_REGION\", \"riot_key\": \"$RIOT_KEY\", \"api_key\": \"$API_KEY\", \"discord_public_key\": \"$DISCORD_PUBLIC_KEY\", \"application_id\": \"$APPLICATION_ID\", \"token\": \"$TOKEN\" }" > configs/config.json
+  #     - name: Deploy prod app
+  #       run: |
+  #         npm ci
+  #         npm run deploy:prod
